    for portability (wrong arity of the bitwise complement function).

    Corrected a bug in the compilation of calls to Prolog proprietary built-in
    meta-predicates that are redefined within an object or category.

    Corrected a race condition bug when running multi-threaded code compiled
    in debug mode that could result in bogus failures.

    Set the default value for the Logtalk flag "code_prefix" to '$' for all
    supported back-end Prolog compilers.

    Updated the ECLiPSe config file in order to support compilation of the
    proprietary built-in predicate set_error_handler/2 and correct the buggy
    compilation of the proprietary built-in predicate set_event_handler/2.
    These two built-in predicates are only supported, however, when used as
    directives.

    Updated the SICStus Prolog, SWI-Prolog, and YAP config files in order
    to correct a bug in the compilation of the ensure_loaded/1 directive
    when used within a Prolog module being compiled as an object.

    Updated the YAP config file to workaround a bug in the built-in predicate
    absolute_file_name/3 where a directory can be returned when looking for a
    regular file (fixed in the current beta of the 6.0.7 version).

    Restored the hacks in the SWI-Prolog and YAP config files, broken in
    the previous release, that allow calling the Prolog built-in predicates
    phrase/2-3 with a Object::GRBody goal in the first argument.

    Updated the SWI-Prolog config file in order to use the numbervars/3 option
    singleton(true) in the auxiliary predicates for pretty printing non-ground
    terms.

    Added predicates intersection/4 and union/4 to the library support for
    ordered sets (protocol "setp" and object "set").

    Added a highly experimental example of ProbLog integration. Requires
    Logtalk to be run with YAP; it may also require a patched version of
    the ProbLog distribution.

    Updated the "multifile" example to illustrate how the body of clauses for